src/objects/Revenue_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Revenue_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>Revenue_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Status__c</fullName>
        <formula>IF (!Opportunity__r.IsClosed, &apos;Unearned&apos;, IF (Opportunity__r.IsWon &amp;&amp; Revenue_Schedule_Date__c &lt; ADDMONTHS(DATE(YEAR(TODAY()), MONTH(TODAY()), 1), 1), &apos;Earned&apos;, &apos;Unearned&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget</label>
        <referenceTo>Budget__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>Revenue_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinic_Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinic Budget</label>
        <referenceTo>Clinic_Budget__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>Revenue_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinic__c</fullName>
        <label>Clinic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clinics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cumulative_Revenue__c</fullName>
        <label>Cumulative Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Won__c</fullName>
        <formula>Opportunity__r.IsWon</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Forecast__c</fullName>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH(Revenue_Schedule_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_Id__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Line Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Probability__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>Revenue_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pipeline_Category__c</fullName>
        <formula>TEXT(Opportunity__r.ForecastCategoryName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Revenue_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Revenue Schedule</label>
        <referenceTo>Revenue_Schedule__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>Previous_Revenue_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>Revenue_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Amount__c</fullName>
        <label>Revenue Amount</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Schedule_Date__c</fullName>
        <label>Revenue Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Schedule_Period__c</fullName>
        <formula>LPAD(TEXT(MONTH(Revenue_Schedule_Date__c )),2,&quot;0&quot;) + &quot;/&quot; + TEXT(YEAR(Revenue_Schedule_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Schedule Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Revenue Schedule Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Pipeline</label>
                </value>
                <value>
                    <fullName>Booked</fullName>
                    <color>#78C953</color>
                    <label>Booked</label>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                    <color>#E27001</color>
                    <label>Shipped</label>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                    <color>#A845DC</color>
                    <label>Invoiced</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                    <color>#009900</color>
                    <label>Paid</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weighted_Revenue_Amount__c</fullName>
        <formula>Revenue_Amount__c * Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Revenue Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>YEAR(Revenue_Schedule_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Revenue Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Revenue_Schedule_Date__c</columns>
        <columns>Revenue_Amount__c</columns>
        <columns>Product__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_Month</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Revenue_Schedule_Date__c</columns>
        <columns>Revenue_Amount__c</columns>
        <columns>Weighted_Revenue_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Revenue_Schedule_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last Month</label>
    </listViews>
    <listViews>
        <fullName>Next_Month</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Revenue_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Revenue_Schedule_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Next Month</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Revenue_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Revenue_Schedule_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{00000}</displayFormat>
        <label>Revenue Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>